update 2022.11.19
1. 修复一些bug
2. 适配多语言(undone)
3. 优化代码