@@ -1,11 +1,10 @@
 package modmake.util.img;
 
-import arc.util.Time;
 import modmake.components.DataHandle;
 import modmake.ui.img.ImgEditor;
 
 import java.nio.ByteBuffer;
-import java.util.ArrayList;
+import java.util.ArrayDeque;
 
 import static modmake.IntUI.view;
 
@@ -13,8 +12,8 @@ public class Stack {
 	private final ImgEditor imgEditor;
 	public static int maxSize = DataHandle.settings.getInt("max_stack_buffer_size", 15);
 	public ByteBuffer tmp = null;
-	public ArrayList<ByteBuffer> undoes = new ArrayList<>();
-	public ArrayList<ByteBuffer> redoes = new ArrayList<>();
+	public ArrayDeque<ByteBuffer> undoes = new ArrayDeque<>();
+	public ArrayDeque<ByteBuffer> redoes = new ArrayDeque<>();
 
 	public Stack(ImgEditor imgEditor) {
 		this.imgEditor = imgEditor;
@@ -23,29 +22,27 @@ public class Stack {
 	public void addUndo(ByteBuffer pixels) {
 		undoes.add(pixels);
 		while (undoes.size() > maxSize) {
-			undoes.remove(0).clear();
+			undoes.pop().clear();
 		}
 	}
 
 	public void addRedo(ByteBuffer pixels) {
 		redoes.add(pixels);
 		while (redoes.size() > maxSize) {
-			redoes.remove(0).clear();
+			redoes.pop().clear();
 		}
 	}
 
 	public void clear() {
-		Time.runTask(1, () -> {
-			undoes.forEach(ByteBuffer::clear);
-			redoes.forEach(ByteBuffer::clear);
-		});
+		undoes.forEach(ByteBuffer::clear);
+		redoes.forEach(ByteBuffer::clear);
 		undoes.clear();
 		redoes.clear();
 	}
 
 	public void undo() {
 		if (canUndo()) {
-			ByteBuffer pixmap = undoes.remove(undoes.size() - 1);
+			ByteBuffer pixmap = undoes.removeLast();
 			addRedo(setPixmap(pixmap));
 		}
 	}
@@ -56,19 +53,20 @@ public class Stack {
 
 	public void redo() {
 		if (canRedo()) {
-			ByteBuffer pixels = redoes.remove(redoes.size() - 1);
+			ByteBuffer pixels = redoes.removeLast();
 			addUndo(setPixmap(pixels));
 		}
 	}
 
 	public ByteBuffer setPixmap(ByteBuffer newPixels) {
-		ByteBuffer pixels = imgEditor.pixmap().pixels;
+		ByteBuffer old = imgEditor.pixmap().pixels;
 
-//			view.cont.texture.draw(pixmap());
+		//			view.cont.texture.draw(pixmap());
 		imgEditor.pixmap().pixels = newPixels;
 		view.rebuildCont();
-		return pixels;
+		return old;
 	}
+
 
 	public boolean canRedo() {
 		return redoes.size() > 0;
